ME_QTRIPDYNAMIC_MODULE_ADVENTURES

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -112,10 +112,12 @@ footer {
   color: #000;
   position: relative;
   height: 350px;
+  width: 100%;
   /* width: calc(25% - 20px); */
   /* padding: 6px; */
   border: 1px solid #ddd;
-  border-radius: 8px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   cursor: pointer;
   -webkit-transition: 0.2s all;
   overflow: hidden;
@@ -192,7 +194,7 @@ footer {
   right: 0;
   z-index: 1;
   margin-top: 16px;
-  margin-right: 8px;
+  margin-right: -8px;
   display: flex;
   justify-content: center;
   align-items: center;
