--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -232,7 +232,7 @@ input[type="number"] {
 #reserved-banner {
   display: none;
 }
-.reservation-visit-button {
+#reservation-visit-button {
   background-color: rgb(255, 145, 0);
   color: #fff;
   display: flex;
@@ -244,7 +244,7 @@ input[type="number"] {
   border-radius: 20px;
   cursor: pointer;
 }
-.reservation-visit-button:hover {
+#reservation-visit-button:hover {
   background-color: rgb(226, 129, 1);
 }
 
